--- a/.env
+++ b/.env
@@ -32,9 +32,9 @@ MAIL_MAILER=smtp
 MAIL_HOST=mail.bashonatrading.com
 MAIL_PORT=465
 MAIL_USERNAME=info@bashonatrading.com
-MAIL_PASSWORD="q!YCN}NUzGlB"
-MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS="info@bashonatrading.com"
+MAIL_PASSWORD='SAG2286or!@#'
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS='info@bashonatrading.com'
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
