Changed .env and  email template

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME="Bashona Trading Ltd."
+APP_NAME="Bashona Trading Ltd"
 APP_ENV=local
 APP_KEY=base64:xx+boShDCXy21npRrw2p3AEZLm2NNLzWMxn/+JZesUM=
 APP_DEBUG=true
@@ -32,8 +32,8 @@ MAIL_MAILER=smtp
 MAIL_HOST=mail.bashonatrading.com
 MAIL_PORT=465
 MAIL_USERNAME=info@bashonatrading.com
-MAIL_PASSWORD='SAG2286or!@#'
-MAIL_ENCRYPTION=tls
+MAIL_PASSWORD='&[W#gzJbi2Yb'
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS='info@bashonatrading.com'
 MAIL_FROM_NAME="${APP_NAME}"
 
