--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME="Bashona Trading Ltd"
 APP_ENV=local
 APP_KEY=base64:xx+boShDCXy21npRrw2p3AEZLm2NNLzWMxn/+JZesUM=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=https://www.bashonatrading.com/
 
 LOG_CHANNEL=stack
