fixed home page

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME="Bashona Trading Ltd"
 APP_ENV=local
 APP_KEY=base64:xx+boShDCXy21npRrw2p3AEZLm2NNLzWMxn/+JZesUM=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://www.bashonatrading.com/
 
 LOG_CHANNEL=stack
@@ -11,9 +11,12 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=takehurr_bashonaTrading
-DB_USERNAME="takehurr_bashonaTrading"
-DB_PASSWORD="bashonaTrading!@#"
+DB_DATABASE=bashona
+#takehurr_bashonaTrading
+DB_USERNAME=root
+#"takehurr_bashonaTrading"
+DB_PASSWORD=root
+#"bashonaTrading!@#"
 
 
 BROADCAST_DRIVER=log
