fixed home page

--- a/.env
+++ b/.env
@@ -11,12 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=bashona
-#takehurr_bashonaTrading
-DB_USERNAME=root
-#"takehurr_bashonaTrading"
-DB_PASSWORD=root
-#"bashonaTrading!@#"
+DB_DATABASE=takehurr_bashonaTrading
+DB_USERNAME="takehurr_bashonaTrading"
+DB_PASSWORD="bashonaTrading!@#"
 
 
 BROADCAST_DRIVER=log
