worked on .env and .htaccess

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /public/storage
 /vendor
 .env.backup
+.env
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
@@ -12,3 +13,4 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+note
