--- a/.htaccess
+++ b/.htaccess
@@ -21,14 +21,33 @@
 # </IfModule>
 
 <IfModule mod_rewrite.c>
-    Options +FollowSymLinks
+    <IfModule mod_negotiation.c>
+        Options -MultiViews -Indexes
+    </IfModule>
+
     RewriteEngine On
+
+    # Handle Authorization Header
+    RewriteCond %{HTTP:Authorization} .
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
+    # Redirect Trailing Slashes If Not A Folder...
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_URI} (.+)/$
+    RewriteRule ^ %1 [L,R=301]
+
+    #hide a Specifuc File
+    <FilesMatch "^\.env">
+        Order allow,deny
+        Deny from all
+    </FilesMatch>
 
     RewriteCond %{REQUEST_URI} !^/public/
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
+
     RewriteRule ^(.*)$ /public/$1
-    #RewriteRule ^ index.php [L]
+    # RewriteRule ^ index.php [L]
     RewriteRule ^(/)?$ public/index.php [L]
 
 </IfModule>
