--- a/.htaccess
+++ b/.htaccess
@@ -60,7 +60,7 @@
 
 
     RewriteRule ^(.*)$ /public/$1
-    RewriteRule ^ index.php [L]
+#    RewriteRule ^ index.php [L]
     RewriteRule ^(/)?$ public/index.php [L]
 
 </IfModule>
