--- a/.env
+++ b/.env
@@ -11,11 +11,11 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-#DB_DATABASE=takehurr_bashonaTrading
+DB_DATABASE=takehurr_bashonaTrading
 #DB_DATABASE=bashona
-#DB_USERNAME="takehurr_bashonaTrading"
+DB_USERNAME="takehurr_bashonaTrading"
 #DB_USERNAME=root
-#DB_PASSWORD="bashonaTrading!@#"
+DB_PASSWORD="bashonaTrading!@#"
 #DB_PASSWORD=root
 
 
