--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME="Bashona Trading Ltd"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:VtCRU6uOTT3g58yjoVX01gN/AV/XVCUpcuKGtlkUm1Q=
 APP_DEBUG=true
 APP_URL=https://www.bashonatrading.com/
