--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="Bashona Trading Ltd"
 APP_ENV=production
 APP_KEY=base64:VtCRU6uOTT3g58yjoVX01gN/AV/XVCUpcuKGtlkUm1Q=
 APP_DEBUG=true
-APP_URL=https://www.bashonatrading.com/
+APP_URL=https://www.bashonatrading.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
